# consilience-engine

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  CODE_OCEAN.md  Dockerfile  README.md  RELEASE.md  pyproject.toml  requirements.txt  run  setup.cfg
.github/workflows/: repro.yml
consilience/: __init__.py  cli.py  engine.py  lenses.py
consilience_deposit/code/: __init__.py
examples/: cardiac.json  immune.json  immune_groups.json
examples/.consilience_cache/: cardiac__expression.json  cardiac__interaction.json  cardiac__process.json  cardiac__structure.json  immune__expression.json  immune__interaction.json  immune__process.json  immune__structure.json
figures/: README.md  fig1_schematic.py  fig_make.py  lbd_roc.py
robustness/: method_invariance.py
robustness/data/: immune_lens_map.json  lens_map.json
scripts/: check_reports.py  repro.sh  teeth_check.py  verify_symbolic.py
tests/: test_engine.py  test_metamorphic.py  test_properties.py
tools/: check_citation_metadata.py  check_citations.py  presubmit.sh
