[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "consilience-engine"
version = "0.1.0"
description = "Keyless, domain-agnostic multi-lens consilience engine: which data modality reveals which class of biological entity."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Patrick Iben" }]
keywords = ["bioinformatics", "data integration", "consilience", "gene sets", "multi-omics"]
dependencies = ["numpy", "scipy", "scikit-learn", "networkx"]

[project.urls]
Homepage = "https://github.com/USER/consilience"

[project.scripts]
consilience = "consilience.cli:main"

[tool.setuptools]
packages = ["consilience"]
